                     CHANGES version 5.29.1

           This file summarizes changes made since 5.0

Version 5.29.1

Fixed: The disk read/write bytes didn't show up in M/Monit for Monit 5.27.0 or later.

Fixed: Issue #998: Old platforms without clock_gettime() and monotonic clock fail to compile Monit 5.29.0.
Thanks to Lutz Mader.


Version 5.29.0

New: Issue #715: The PostgreSQL protocol test was extended with username, password and database options. Example:
    if failed port 5432 protocol pgsql username "myusername" password "123456" database "test" then alert
The previous Monit version used hardcoded user=root and database=root, which may trigger thousands of messages like
this in the postgresql log a day:
        root@root FATAL:  password authentication failed for user "root"
        root@root DETAIL:  Role "root" does not exist.
If no username option is set, monit will keep using the hardcoded credentials (for backward compatibility).

New: Issue #973: The program test now allows to check the program output using a regular expression. Syntax:
        IF CONTENT [!]= <regex> THEN action
Example:
        check program disk0_smart with path "/usr/sbin/nvme smart-log /dev/nvme0"
            if content != "critical_warning[ ]+: 0" then alert

New: Issue #974: Monit CLI: Add support for the '-g' option to the 'report' command. Example:
        monit -g database report

Fixed: Issue #991: MacOS: Monit didn't compile on MacOS 10.13 or older, as mount flags that were added in Monit 5.28.1
were not defined. Thanks to Lutz Mader.

Fixed: Issue #994 (Monit 5.28.1 regression): The 'check program' with custom test schedule (using the 'every' statement)
doesn't work.

Fixed: Issue #995: The Monit start delay is vulnerable to time jumps while Monit is waiting for the interval to pass.
Thanks to Daniel Crowe.

Fixed: Issue #975: Monit CLI: Monit didn't return any warning if -s, -p, -l, -g or -c command-line options were specified