@@ -9,6 +9,8 @@ Fixed: The disk read/write bytes didn't show up in M/Monit for Monit 5.27.0 or l
 Fixed: Issue #998: Old platforms without clock_gettime() and monotonic clock fail to compile Monit 5.29.0.
 Thanks to Lutz Mader.
 
+Fixed: Issue #1002: 32-bit Linux with more then 4GB of RAM reported wrong system memory and swap value.
+
 
 Version 5.29.0
 
